corrected input date triggering onChange on mobile browsers

--- a/client/src/styles/_styles.scss
+++ b/client/src/styles/_styles.scss
@@ -1,15 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  overscroll-behavior-x: none;
-  overscroll-behavior-y: none;
-  height: 100%;
-  width: 100%;
-}
-
 //COLORS
 $white: #fefefe;
 $black: #3d375a;
@@ -24,13 +12,8 @@ $green: #5ebac7;
 $pink: #f53f77;
 $pink2: #e63a6e;
 
+//SHADOWS
 $box-shadow-default: rgba(149, 157, 165, 0.8) 0px 3px 4px;
-
-@mixin childCenter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 //SIZES
 $size-xxs: 0.5rem;
@@ -82,9 +65,21 @@ $size-10xl: 10rem;
   src: url(../assets/fonts/Rubik-Bold.ttf);
   font-weight: bold;
 }
-
 $font1: Lato, sans-serif;
 $font2: Rubik, sans-serif;
+
+//TAGS
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  overscroll-behavior-x: none;
+  overscroll-behavior-y: none;
+  height: 100%;
+  width: 100%;
+}
 
 body {
   font-family: $font1;
@@ -101,15 +96,6 @@ svg {
   display: block;
   max-width: 100%;
   user-select: none;
-}
-
-button {
-  display: inline-block;
-  padding: 0;
-  border: none;
-  background: none;
-  cursor: pointer;
-  color: inherit;
 }
 
 a {
